some ui bugs fixed and improvements
- Fixed extra space at the bottom to prevent overlap with the navigation bar on devices with persistent navigation controls
- Fixed logic for detecting small mobile devices to avoid false positives in landscape
- Add display number of stored email addresses in email management section to improve user overview and management
landscape

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -24,9 +24,14 @@
     flex: 1;
     justify-content: center;
   }
+
+  ion-card {
+    // Add enough padding to clear the navigation bar
+    padding-bottom: 100px !important;
+  }
 }
 // style for smaller screens, e.g. Galaxy J5
-@media (max-height: 640px) {
+@media (max-height: 640px) and (orientation: portrait) {
   .qr-code {
     // enable scrolling for the entire card
     max-height: calc(100vh - 100px) !important;
